[package]
name = "replays-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1" }
actix-web = "4"
rust-s3 = "0.33.0"
bytes = "1"
anyhow = "1.0"
